fix text alignment of current page in left-sidebar

--- a/components/left-sidebar/server.css
+++ b/components/left-sidebar/server.css
@@ -113,11 +113,12 @@
     display: block;
 
     padding-inline: 0.5rem;
+    border-inline-start: 2px solid var(--color-area-highlight-border);
+    margin-inline-start: calc(-1 * (0.5rem + 2px)); /* Negative margin for text alignment. */
 
     font-style: normal;
 
     background-color: var(--color-area-background);
-    border-left: 2px solid var(--color-area-highlight-border);
   }
 
   .icon {
